[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imgsvc"
version = "1.0.0"
description = "On-demand image processing service"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0.0",
    "tornado>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
include = ["imgsvc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
